# n-central-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  EXAMPLE-REQUESTS.md  README.md  docker-compose.yml  eslint.config.js  index.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: CLI-ARCHITECTURE.md  SETUP-GUIDE.md
ncentral-cli/: README.md  pyproject.toml
ncentral-cli-role-destructive/: pyproject.toml
ncentral-cli-role-destructive/src/ncentral_cli_role_destructive/: __init__.py
ncentral-cli-role-read/: pyproject.toml
ncentral-cli-role-read/src/ncentral_cli_role_read/: __init__.py
ncentral-cli-role-readwrite/: pyproject.toml
ncentral-cli-role-readwrite/src/ncentral_cli_role_readwrite/: __init__.py
ncentral-cli/src/ncentral/: __init__.py
ncentral-cli/src/ncentral/cli/: __init__.py  main.py
ncentral-cli/tests/: test_catalog.py
ncentral-core/: README.md  pyproject.toml
ncentral-core/src/ncentral_core/: __init__.py  catalog.py  mcp.py  output.py  role.py
src/: auth.js  client.js  logging.js  metrics.js  paginator.js  prompts.js  resources.js  server-utils.js  shared.js  tool-registry.js
src/tools/: custom-properties.js  devices.js  maintenance-windows.js  notes.js  organizations.js  psa.js  registration.js  reports.js  scheduled-tasks.js  server-info.js  users.js
test/: helpers.test.js  server-utils.test.js  utils.test.js
tools/: build_python_packages.py
